feat: adicionados testes para helpers e handlers de exceções
Criados testes unitários para classes de helpers e handlers de exceções, incluindo ErrorResponseFactory, FieldPathParserHelper, WebClientMessageExtractorHelper e outros. Alteração garante maior cobertura de testes e validação das funcionalidades implementadas.